tests/derive/ui/de/fail/tag_flag.stderr
error: tag_flag enum requires exactly 2 variants
 --> tests/derive/ui/de/fail/tag_flag.rs:5:6
  |
5 | enum A {
  |      ^

error: tag_flag enum requires exactly one variant marked with #[irc(present)]
 --> tests/derive/ui/de/fail/tag_flag.rs:5:6
  |
5 | enum A {
  |      ^

error: the absent variant of a `tag_flag` enum must be a unit variant (no fields)
  --> tests/derive/ui/de/fail/tag_flag.rs:16:5
   |
16 |     Absent {
   |     ^^^^^^

error: #[irc(value)] is not allowed on `tag_flag` enum variants, use #[irc(present)] instead
  --> tests/derive/ui/de/fail/tag_flag.rs:26:19
   |
26 |     #[irc(value = "no")]
   |                   ^^^^

error: #[irc(present)] is only valid on `tag_flag` enum variants
  --> tests/derive/ui/de/fail/tag_flag.rs:33:11
   |
33 |     #[irc(present)]
   |           ^^^^^^^

error: `present` does not take a value
  --> tests/derive/ui/de/fail/tag_flag.rs:41:11
   |
41 |     #[irc(present = "yes")]
   |           ^^^^^^^
